objects/MMPJ_Ext_Vign_Notification__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for both Cognac &amp; Champagne</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Corp_Email_Notification__c</fullName>
        <formula>IF(
	OR( 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture d&apos;approvisionnement&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture d&apos;enlèvement&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture de pressurage et vinification&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture prestation de services&quot;) 
	),
	&quot;Bonjour &quot; &amp;  MMPJ_Ext_Vign_Nom_Complet_du_Contact__c &amp; &quot;,&quot; &amp; BR() &amp; &quot;Une nouvelle facture est à votre disposition sur MMPJ&amp;Moi.&quot; &amp; BR() &amp; &quot;Nous vous invitons à vous connecter à votre espace personnel pour en prendre connaissance en cliquant sur &quot; &amp; HYPERLINK(&quot;https://www.mmpjetmoi.fr/espace-personnel/factures/liste&quot;, &quot;ce lien&quot;) &amp; &quot;.&quot; &amp; BR() &amp; BR() &amp; &quot;A bientôt !&quot; &amp; BR()&amp; &quot;L&apos;équipe MMPJ&amp;Moi&quot; &amp; BR() &amp; BR(),
	IF(
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Audit&quot;)
		,
		&quot;Bonjour &quot; &amp;  MMPJ_Ext_Vign_Nom_Complet_du_Contact__c &amp; &quot;,&quot; &amp; BR() &amp; &quot;Un nouveau document d&apos;audit est à votre disposition sur MMPJ&amp;Moi.&quot; &amp; BR() &amp; &quot;Nous vous invitons à vous connecter à votre espace personnel pour en prendre connaissance en cliquant sur &quot; &amp; HYPERLINK(&quot;https://www.mmpjetmoi.fr/espace-personnel/audit&quot;, &quot;ce lien&quot;) &amp; &quot;.&quot; &amp; BR() &amp; BR() &amp; &quot;A bientôt !&quot; &amp; BR()&amp; &quot;L&apos;équipe MMPJ&amp;Moi&quot; &amp; BR() &amp; BR(),
		IF(
			ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Analyse&quot;),
			&quot;Bonjour &quot; &amp;  MMPJ_Ext_Vign_Nom_Complet_du_Contact__c &amp; &quot;,&quot; &amp; BR() &amp; &quot;Une nouvelle analyse d&apos;échantillon est à votre disposition sur MMPJ&amp;Moi.&quot; &amp; BR() &amp; &quot;Nous vous invitons à vous connecter à votre espace personnel pour en prendre connaissance en cliquant sur &quot; &amp; HYPERLINK(&quot;https://www.mmpjetmoi.fr/espace-personnel/echantillons-gestion-des-analyses&quot;, &quot;ce lien&quot;) &amp; &quot;.&quot; &amp; BR() &amp; BR() &amp; &quot;A bientôt !&quot; &amp; BR()&amp; &quot;L&apos;équipe MMPJ&amp;Moi&quot; &amp; BR() &amp; BR(),
			IF( 
				ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Invitation&quot;),
				&quot;Bonjour &quot; &amp;  MMPJ_Ext_Vign_Nom_Complet_du_Contact__c &amp; &quot;,&quot; &amp; BR() &amp; &quot;Vous êtes invité à un nouvel évènement via MMPJ&amp;Moi.&quot; &amp; BR() &amp; &quot;Ne tardez pas à vous connecter à votre plateforme pour vous inscrire.&quot; &amp; BR() &amp; BR() &amp; &quot;A bientôt !&quot; &amp; BR()&amp; &quot;L&apos;équipe MMPJ&amp;Moi&quot; &amp; BR() &amp; BR(),
				IF( 
					ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Brouillon de déclaration de récolte&quot;),
					&quot;Bonjour &quot; &amp;  MMPJ_Ext_Vign_Nom_Complet_du_Contact__c &amp; &quot;,&quot; &amp; BR() &amp; &quot;Nouveau brouillon de déclaration de récolte est à votre disposition sur MMPJ&amp;Moi.&quot; &amp; BR() &amp; &quot;Nous vous invitons à vous connecter à votre espace personnel pour le compléter.&quot; &amp; BR() &amp; BR() &amp; &quot;A bientôt !&quot; &amp; BR()&amp; &quot;L&apos;équipe MMPJ&amp;Moi&quot; &amp; BR() &amp; BR(),
					&quot;&quot;
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMPJ Ext Vign Corp Email Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Intitule__c</fullName>
        <label>Intitulé</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nom_Complet_du_Contact__c</fullName>
        <formula>TEXT(MMPJ_Ext_Vign_Contact__r.Salutation) &amp; &quot; &quot; &amp; MMPJ_Ext_Vign_Contact__r.FirstName  
 &amp; &quot; &quot; &amp; MMPJ_Ext_Vign_Contact__r.LastName</formula>
        <label>Nom Complet du Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Sujet_Email_Notification__c</fullName>
        <formula>IF(
	OR( 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture d&apos;approvisionnement&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture d&apos;enlèvement&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture de pressurage et vinification&quot;), 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Facture prestation de services&quot;) 
	),
	&quot;MMPJetMoi - Une nouvelle facture vous attend&quot;,
	IF( 
		ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Audit&quot;),
		&quot;MMPJetMoi - Un nouveau document d&apos;audit vous attend&quot;,
		IF(
			ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Analyse&quot;),
			&quot;MMPJetMoi - Une nouvelle analyse d&apos;échantillon vous attend&quot;,
			IF( 
				ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Invitation&quot;),
				&quot;MMPJetMoi - Une nouvelle invitation vous attend&quot;,
				IF(
					ISPICKVAL( MMPJ_Ext_Vign_Type__c ,&quot;Brouillon de déclaration de récolte&quot;),
					&quot;MMPJetMoi - Un nouveau brouillon de déclaration de récolte vous attend&quot;,
					&quot;&quot;
				)
			)
		)
	)
)</formula>
        <label>MMPJ Ext Vign Sujet Email Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facture</fullName>
                </value>
                <value>
                    <fullName>Relance</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Analyse</fullName>
                </value>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>Réponse</fullName>
                </value>
                <value>
                    <fullName>Message</fullName>
                </value>
                <value>
                    <fullName>Facture d&apos;approvisionnement</fullName>
                </value>
                <value>
                    <fullName>Facture d&apos;enlèvement</fullName>
                </value>
                <value>
                    <fullName>Facture de pressurage et vinification</fullName>
                </value>
                <value>
                    <fullName>Facture prestation de services</fullName>
                </value>
                <value>
                    <fullName>Brouillon de déclaration de récolte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Date__c</columns>
        <columns>MMPJ_Ext_Vign_Intitule__c</columns>
        <columns>MMPJ_Ext_Vign_Type__c</columns>
        <columns>MMPJ_Ext_Vign_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Champagne</group>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Numéro Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>